retail-media/v2024.10/docs/criteo-api-swagger.mdx
---
title: "Criteo API Swagger"
---

<Info>
  **Open API file**

  Criteo has a **live OpenAPI file** along with [our API reference](/retail-media/api-reference/authorization/get-token) available to developers.
</Info>

***

## Downloading the Open API file

The file can be accessed here:

<CodeGroup>
  ```http URL
   https://api.criteo.com/{version}/{criteo-service}/open-api-specifications.json
  ```
</CodeGroup>

where:

* `{version}`: Any stable version starting from v2020-10 or higher without the "v" or non-stable Preview version.

* `{criteo-service}`:

  * **marketingsolutions** for our Marketing Solutions' endpoints
  * **retailmedia** for our Retail Media's endpoints
  * **api** for our oauth endpoint used by Marketing Solutions and Retail Media endpoints

<Info>
  **Check available versions**

  You can check all available versions per service in the dropdown menu on the top of this page.

  <Frame>
  ![](/images/retail-media/v2024.10/docs/79a7e884b8ffd49235b53f1d8df933d8e208d039dfeba25ca6e59b9812f1a14a-image.png)
  </Frame>
</Info>

***

### Example

For example, the URL below will download the specification for the Retail Media API v2024-10:

<CodeGroup>
  ```http URL
  https://api.criteo.com/2024-10/retailmedia/open-api-specifications.json
  ```
</CodeGroup>

<Frame caption="The OpenAPI spec corresponding to the example URL above (2024-10 version, for retail media)">
  <img src="/images/retail-media/v2024.10/docs/2a5d468dbfb285354f1bfa8bfb704843e7a72b1493750c349b5ea9248da69f22-image.png" />
</Frame>

***

**What’s Next**

* [Use Postman with the Criteo Retail Media API](/retail-media/v2024.10/docs/use-postman-with-the-criteo-retail-media-api)
