retail-media/v2026.01/docs/criteo-api-swagger.mdx
---
title: Criteo API Swagger
original_file: to-migrate/criteo-dev-portal-full-export/merged_export/Retail_Media/v2026_01/docs/Resources/criteo-api-swagger.md
---



<Info>
  **Open API File**

  Criteo has a **live OpenAPI file** along with [our API reference](/retail-media/reference/authorization/get-token) available to developers.
</Info>

***

## Downloading the Open API file

The file can be accessed here:

```http URL
 https://api.criteo.com/{version}/{criteo-service}/open-api-specifications.json
```

where:

* `{version}`: Any stable version starting from `v2020-10` or higher without the `v` or non-stable `Preview` version.

* `{criteo-service}`:
  * **`marketingsolutions`** for our Marketing Solutions' endpoints,
  * **`retailmedia`** for our Retail Media's endpoints.

<Info>
  **Check available versions**

  You can check all available versions per service in the dropdown menu on the top of this page.

  <Frame>
  ![79a7e884b8ffd49235b53f1d8df933d8e208d039dfeba25ca6e59b9812f1a14a image](/images/retail-media/v2026.01/docs/79a7e884b8ffd49235b53f1d8df933d8e208d039dfeba25ca6e59b9812f1a14a-image.png)
  </Frame>
</Info>

***

### Example

For example, the URL below will download the specification for the Retail Media API `v2026.01`:

```http URL
https://api.criteo.com/2026-01/retailmedia/open-api-specifications.json
```

<Frame>
![57e5addf74e8caaa0ba68d2aab0e65273a059e25e34576d101c77a1028facd17  Users annefreant Downloads 2026 01_retailmedia_oas 1 json](/images/retail-media/v2026.01/docs/57e5addf74e8caaa0ba68d2aab0e65273a059e25e34576d101c77a1028facd17--Users-annefreant-Downloads-2026-01_retailmedia_oas-1-json.png)
</Frame>

***

<br />


## What's next

* [Postman Collection](/retail-media/v2026.01/docs/postman-collection)
